scroll bar z-index issue

--- a/Durhams/css/style.css
+++ b/Durhams/css/style.css
@@ -105,7 +105,7 @@ body {
     height: 100%;
     /* background: #ccc; */
     /* max-width: 660px; */
-    z-index:1;
+    z-index:10000;
 }
 .MainContentBox {
      display: block;
@@ -193,6 +193,7 @@ body {
     bottom: 0px;
     left: 0px;
     opacity:0.3;
+    z-index:0;
 }
 .content-para {
     background-size: cover;
